--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,16 @@
   <head>
     <title>InfiniteLoop</title>
     <%= csrf_meta_tags %>
+    <script type="text/javascript">
+      <% if current_user %>
+  	     window.currentUser =
+         <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
+      <% end %>
+    </script>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
   </head>
 
   <body>
