--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
       <% end %>
     </script>
 
+    <script>
+      window.logo = "<%= image_url("logo.png") %>"
+    </script>
+
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
