--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -1,6 +1,6 @@
 @import "api/colors.scss";
 
-header, body, div, ul, li, img, h1, input, p{
+header, body, div, ul, li, img, h1, input, p, link{
   margin: 0;
   padding: 0;
   border: 0;
@@ -12,9 +12,15 @@ header, body, div, ul, li, img, h1, input, p{
   font: inherit;
 
   border-radius: 3px;
+  text-decoration: none;
 }
 
 .main {
   display: flex;
   justify-content: flex-end;
+}
+
+.link {
+  text-decoration: none;
+  color: black;
 }
