add pointer to cursor over submit

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -1,6 +1,6 @@
 @import "api/colors.scss";
 
-header, body, div, ul, li, img, h1, input, p, link{
+header, body, div, ul, li, img, h1, input, p, link, button{
   margin: 0;
   padding: 0;
   border: 0;
