--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -53,6 +53,7 @@
   border-radius: 3px;
   align-self: flex-end;
   margin-top: 20px;
+  cursor: pointer;
 }
 
 .main-session-form input {
@@ -79,6 +80,14 @@
   width: 33%;
 }
 
+.tab-1:hover {
+  cursor: pointer;
+}
+
+.tab-1 button:hover{
+  cursor: pointer;
+}
+
 .tab-2 {
   width: 33%;
   border-right: 2px solid $abisso;
@@ -92,6 +101,7 @@
   justify-content: flex-end;
   border-bottom: 2px solid $abisso;
 }
+
 
 .lower-tab{
   display: flex;
