--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     </script>
 
     <script>
-      window.logo = "<%= image_url("logo.png") %>"
+      window.logo = "<%= image_url("logo.svg") %>"
     </script>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
