--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -10,10 +10,11 @@
   height: auto;
   width: 20%;
   padding: 5px;
-  margin: 5px;
+  margin: 20px;
   border: 2px solid rgba(0,0,0,0.7);
   border-radius: 3px;
   align-items: center;
+  align-self: flex-end;
 }
 
 .form-logo{
