--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>InfiniteLoop</title>
     <%= csrf_meta_tags %>
+
     <script type="text/javascript">
       <% if current_user %>
   	     window.currentUser =
@@ -12,11 +13,15 @@
 
     <script>
       window.logo = "<%= image_url("logo.svg") %>"
+      window.logoWhite = "<%= image_url("logo-white.svg") %>"
     </script>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <script src="https://use.fontawesome.com/2fe71a01c5.js"></script>
+    
   </head>
 
   <body>
