--- a/app/assets/stylesheets/api/nav_bar.scss
+++ b/app/assets/stylesheets/api/nav_bar.scss
@@ -9,15 +9,16 @@
 }
 
 .nav-bar a{
-  width: 20%;
+  width: 10%;
+  padding: 20px;
 }
 
 .fa-search{
   color: white;
-  border-top: 2px solid $terra;
-  border-right: 2px solid $terra;
-  border-bottom: 2px solid $terra;
   border-radius: 3px;
+  cursor: pointer;
+  box-sizing: border-box;
+  padding: 5px;
 }
 
 .search-bar {
@@ -31,7 +32,11 @@
   width: 100%;
   box-sizing: border-box;
   align-self: center;
+  outline: none;
+  padding: 5px;
 }
+
+
 .search-bar input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: white;
 }
@@ -46,7 +51,6 @@
 }
 
 .main-logo {
-  width: 50%;
   height: auto;
 }
 
