--- a/app/assets/stylesheets/api/nav_bar.scss
+++ b/app/assets/stylesheets/api/nav_bar.scss
@@ -6,6 +6,23 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 0;
+}
+
+.nav-1{
+  flex: 1;
+  align-self: flex-start;
+}
+
+.nav-2{
+  flex:1;
+  align-self: center;
+}
+
+.nav-3 {
+  flex:1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .nav-bar a{
@@ -52,19 +69,20 @@
 
 .main-logo {
   height: auto;
+  width: 45%;
+  padding: 10px;
 }
 
 .logout-button {
   color: white;
   text-align: center;
   box-sizing: border-box;
-  margin: 20px;
 }
 
 .logout-button button{
   color: white;
   font-size: 120%;
-  padding: 10px;
+  padding: 20px;
   border-radius: 3px;
   cursor: pointer;
 }
@@ -89,10 +107,10 @@
   height: 4px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
 }
 .hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
   left: 0;
