--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -13,6 +13,7 @@ header, body, div, ul, li, img, h1, input, p, link, button, a{
 
   border-radius: 3px;
   text-decoration: none;
+  outline: none;
 }
 
 .main {
