--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   height: auto;
-  width: 20%;
+  width: 285px;
   padding: 5px;
   margin: 20px;
   border: 2px solid rgba(0,0,0,0.7);
@@ -54,21 +54,8 @@
   text-align: right;
 }
 
-.main-session-form input:last-of-type {
-  border-radius: 3px;
-  align-self: flex-end;
-  margin-top: 15px;
-  background-color: rgba(3,22,52,.7);
-  color: white;
-}
-
-.main-session-form input:last-of-type:hover{
-  background-color: $abisso;
-  cursor: pointer;
-}
-
 .main-session-form input {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   border: 2px solid rgba(3,22,52,0.7);
   font-size: 80%;
   padding: 4px;
@@ -79,6 +66,7 @@
 }
 
 .auth-tabs{
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
 }
@@ -88,7 +76,7 @@
   border-right: 2px solid $abisso;
   border-left: 2px solid $abisso;
   border-top: 2px solid $abisso;
-  width: 33%;
+  width: 50%;
 }
 
 .tab-2 button {
@@ -96,7 +84,7 @@
 }
 
 .tab-2-active {
-  background-color: $acqua;
+  background-color: $acquaPro;
   border-radius: 0;
 }
 
@@ -116,7 +104,7 @@
 }
 
 .tab-1 {
-  width: 33%;
+  width: 50%;
   border-right: 2px solid $abisso;
   border-left: 2px solid $abisso;
   border-top: 2px solid $abisso;
@@ -129,7 +117,7 @@
 }
 
 .color{
-  background-color: $acqua;
+  background-color: $acquaPro;
   border-radius: 0;
 }
 
@@ -161,20 +149,49 @@
   opacity: 0.6;
 }
 
-.demo {
-  align-self: left;
-  position: relative;
-  top: 40px;
-  left: 15px;
-  border: 2px solid $abisso;
-  padding: 4px;
-  border-radius: 3px;
+.submit-demo{
+  display: flex;
+  margin-top: 20px;
+  flex-direction: column;
+}
+
+.demo{
+  margin-bottom: 1px;
+  border: 2px solid rgba(3,22,52,0.7);
   font-size: 80%;
-  background-color: rgba(3,22,52,.7);
+  padding: 4px;
+  background-color: rgba(3,22,52,0.8);
   color: white;
   cursor: pointer;
 }
 
-.demo:hover {
+.form-submit{
+  background-color: rgba(3,22,52,0.8);
+  color: white;
+  cursor: pointer;
+}
+
+
+.hvr-fade {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
   background-color: $abisso;
+  color: white;
+}
+
+.error {
+  color: red;
+  font-size: 80%;
+  text-align: left;
+  margin-bottom: 15px;
 }
