--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -20,6 +20,8 @@ header, body, div, ul, li, img, h1, input, p, link, button, a{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .link {
