--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the api/questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'colors.scss';
+
+.question-index {
+  flex: 3;
+  margin: 20px;
+  border: 2px solid $abisso;
+  box-sizing: border-box;
+  padding: 5px;
+  border-radius: 3px;
+}
+
+.questions {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  align-items: center;
+}
