--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -11,6 +11,7 @@
   box-sizing: border-box;
   padding: 5px;
   border-radius: 3px;
+  font-family: "Open Sans", "serif";
 }
 
 .questions {
@@ -18,4 +19,51 @@
   flex-direction: column;
   width: 90%;
   align-items: center;
+  margin: 0 auto;
+}
+
+.question-lower{
+  display: flex;
+  border-radius: 0;
+  padding-top: 5px;
+}
+
+.question-upper {
+  display: flex;
+  justify-content: flex-start;
+  border-top: 1px solid $abisso;
+  border-radius: 0;
+  padding-bottom: 5px;
+}
+
+.question-bar{
+  width: 100%;
+  box-sizing: border-box;
+  margin: 10px;
+  display: flex;
+}
+
+.question-grid{
+  width: 100%;
+  flex: 4;
+}
+
+.upvote-block{
+  flex: 1;
+}
+
+.upvote-block{}
+
+.question-username{
+  flex: 1;
+  text-align: right;
+}
+
+.question-created-at{
+  flex: 1;
+  text-align: center;
+}
+
+.question-fill-lower{
+  flex: 1;
 }
