--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -14,8 +14,9 @@
   border: 2px solid rgba(0,0,0,0.7);
   border-radius: 3px;
   align-items: center;
-  align-self: flex-end;
+  align-self: flex-start;
   flex: 1;
+  font-family: "Droid Sans", serif;
 }
 
 .form-logo{
