--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -26,12 +26,14 @@
   display: flex;
   border-radius: 0;
   padding-top: 5px;
+  box-sizing: border-box;
+  width: 100%;
+  font-size: 80%;
 }
 
 .question-upper {
   display: flex;
   justify-content: flex-start;
-  border-top: 1px solid $abisso;
   border-radius: 0;
   padding-bottom: 5px;
 }
@@ -39,20 +41,29 @@
 .question-bar{
   width: 100%;
   box-sizing: border-box;
-  margin: 10px;
   display: flex;
+  border-bottom: 1px solid $abisso;
+  height: 100px;
+  padding: 5px;
 }
 
 .question-grid{
   width: 100%;
   flex: 4;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: space-between;
+  margin: 5px;
 }
 
 .upvote-block{
   flex: 1;
 }
 
-.upvote-block{}
+.upvote-block{
+
+}
 
 .question-username{
   flex: 1;
@@ -60,10 +71,9 @@
 }
 
 .question-created-at{
-  flex: 1;
-  text-align: center;
+  flex: 3;
+  text-align: right;
 }
 
 .question-fill-lower{
-  flex: 1;
 }
