--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -75,9 +75,7 @@
 
 .tab-2 {
   text-align: center;
-  border-right: 2px solid $abisso;
-  border-left: 2px solid $abisso;
-  border-top: 2px solid $abisso;
+  border: 2px solid $abisso;
   width: 50%;
 }
 
@@ -107,9 +105,7 @@
 
 .tab-1 {
   width: 50%;
-  border-right: 2px solid $abisso;
-  border-left: 2px solid $abisso;
-  border-top: 2px solid $abisso;
+  border: 2px solid $abisso;
   text-align: center;
 }
 
@@ -140,7 +136,6 @@
 .upper-tab{
   display: flex;
   justify-content: flex-end;
-  border-bottom: 2px solid $abisso;
 }
 
 
