--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -7,7 +7,6 @@
 .question-index {
   flex: 3;
   margin: 20px;
-  border: 2px solid $abisso;
   box-sizing: border-box;
   padding: 5px;
   border-radius: 3px;
@@ -42,7 +41,7 @@
   width: 100%;
   box-sizing: border-box;
   display: flex;
-  border-bottom: 1px solid $abisso;
+  border-bottom: 2px solid $terraTerra;
   height: 100px;
   padding: 5px;
 }
@@ -73,6 +72,7 @@
 .question-created-at{
   flex: 3;
   text-align: right;
+  font-size: 75%;
 }
 
 .question-fill-lower{
