Add next/back functionality

--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -77,3 +77,13 @@
 
 .question-fill-lower{
 }
+
+.questions-list-navigation {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.questions-list-navigation:first-child {
+  border-bottom: 2px solid $terraTerra;
+}
