--- a/app/assets/stylesheets/api/tab.scss
+++ b/app/assets/stylesheets/api/tab.scss
@@ -23,25 +23,27 @@
 }
 
 .unselected {
-  color: $terra;
+  color: $terraTerra;
   border-top: 2px solid $terraTerra;
   font-size: 80%;
 }
 
-.hvr-sink {
+.unselected:hover{
+  color: rgba(205, 179, 128, 0.8);
+}
+
+.hvr-grow {
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px transparent;
-  -webkit-transition-duration: 0.1s;
-  transition-duration: 0.1s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-property: transform;
   transition-property: transform;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
 }
-.hvr-sink:hover, .hvr-sink:focus, .hvr-sink:active {
-  -webkit-transform: translateY(4px);
-  transform: translateY(4px);
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
