Add show route and ajax request, debug refresh error for question show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,5 +20,6 @@
  @import "api/nav_bar.scss";
  @import "api/session.scss";
  @import "api/questions.scss";
+ @import "api/question_show.scss";
  @import "api/tab.scss";
  @import "api/media.scss";
