Basic styling for question show

--- a/app/assets/stylesheets/api/question_show.scss
+++ b/app/assets/stylesheets/api/question_show.scss
@@ -19,4 +19,11 @@
   width: 90%;
   align-items: center;
   margin: 0 auto;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
+.question-show-items {
+  display: flex;
+  flex-direction: column;
 }
