--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -39,5 +39,11 @@ input:focus::-webkit-input-placeholder {
 
 h3 {
   font-weight: bolder;
-  color: $acquaPro;
+  color: $abisso;
+}
+
+h2 {
+  font-weight: bolder;
+  color: $abisso;
+  font-size: 120%;
 }
