--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -6,7 +6,6 @@
 
 .question-index {
   flex: 3;
-  margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 30px;
   margin-top: 30px;
@@ -31,6 +30,7 @@
   padding-top: 5px;
   box-sizing: border-box;
   width: 100%;
+  height: auto;
   font-size: 80%;
 }
 
@@ -39,6 +39,8 @@
   justify-content: flex-start;
   border-radius: 0;
   padding-bottom: 5px;
+  height: auto;
+  width: 100%;
 }
 
 .question-bar{
@@ -46,7 +48,7 @@
   box-sizing: border-box;
   display: flex;
   border-bottom: 2px solid $terraTerra;
-  height: 100px;
+  min-height: 100px;
   padding: 5px;
 }
 
