--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -13,7 +13,7 @@
   box-sizing: border-box;
   padding: 5px;
   border-radius: 3px;
-  font-family: "Open Sans", "serif";
+  font-family: "Playfair Display", "serif";
 }
 
 .questions {
