--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,5 +21,6 @@
  @import "api/session.scss";
  @import "api/question_show.scss";
  @import "api/questions.scss";
+ @import "api/answers.scss";
  @import "api/tab.scss";
  @import "api/media.scss";
