--- a/app/assets/stylesheets/api/answers.scss
+++ b/app/assets/stylesheets/api/answers.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the api/answers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.answer-details {
+  width: 100%;
+  align-items: center;
+  padding: 20px 30px;
+  box-sizing: border-box;
+
+  border-bottom: 1px solid rgba(3, 22, 52, 0.2);
+}
+
+.answer-index {
+  border: 1px solid rgba(3, 22, 52, 0.2);
+}
