--- a/app/assets/stylesheets/api/answers.scss
+++ b/app/assets/stylesheets/api/answers.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import 'colors.scss';
+
 .answer-details {
   width: 100%;
   align-items: center;
@@ -13,4 +15,46 @@
 
 .answer-index {
   border: 1px solid rgba(3, 22, 52, 0.2);
+}
+
+.answer-submit textarea {
+  margin-bottom: 5px;
+  border: 2px solid rgba(3,22,52,0.7);
+  font-size: 80%;
+  padding: 4px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.answer-submit input:last-of-type{
+  margin-bottom: 5px;
+  border: 2px solid rgba(3,22,52,0.7);
+  font-size: 80%;
+  padding: 4px;
+  color: white;
+  background-color: rgba(3,22,52,0.8);
+  cursor: pointer;
+}
+
+.answer-submit input:last-of-type:hover{
+  background-color: $abisso;
+}
+
+.answer-submit .title-block {
+  width: 100%;
+}
+
+.answer-submit {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 20px;
+}
+
+.answer-block {
+  width: 100%;
+}
+
+.answer-details:nth-child(odd){
+  background-color: rgba(3, 54 ,73, 0.1);
 }
