--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -62,6 +62,11 @@
   margin: 5px;
 }
 
+.question-title h3:hover {
+  color: rgba(80, 80, 250, 0.8);
+  text-shadow: 1px 1px 2px rgba(80, 80, 250, 0.1);
+}
+
 .upvote-block{
   flex: 1;
 }
