--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -27,12 +27,6 @@ input:focus::-webkit-input-placeholder {
     opacity: 0;
 }
 
-.main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .link {
   text-decoration: none;
   color: black;
@@ -51,4 +45,12 @@ h2 {
 
 .inactve {
   color: $abisso;
+}
+
+body {
+  background-image: image_url("background-image.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 1800px;
+  background-attachment: fixed;
 }
