--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <script>
       window.logo = "<%= image_url("logo.svg") %>"
       window.logoWhite = "<%= image_url("logo-white.svg") %>"
+      window.background_logo = "<%= image_url("background-image.svg") %>"
     </script>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
