--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
       <% end %>
     </script>
 
+    <%= favicon_link_tag 'favicon.png' %>
+
     <script>
       window.logo = "<%= image_url("logo.svg") %>"
       window.logoWhite = "<%= image_url("logo-white.svg") %>"
