--- a/app/assets/stylesheets/api/question_show.scss
+++ b/app/assets/stylesheets/api/question_show.scss
@@ -117,9 +117,12 @@
   left: auto;
   background-color: white;
   border: 1px solid rgba(3, 54, 73, 0.4);
-  padding: 20px;
+  padding: 30px;
   box-shadow: 2px 3px 10px rgba(3, 22, 52, 0.3);
+  border: 1px solid $abisso;
+  box-sizing: border-box;
 }
+
 
 .edit-modal-after input:last-of-type{
   margin-bottom: 1px;
@@ -142,7 +145,7 @@
 }
 
 .edit-form input, textarea {
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   border: 3px solid rgba(3,22,52,0.7);
   font-size: 80%;
   padding: 4px;
@@ -151,4 +154,14 @@
 .question-header {
   display: flex;
   justify-content: center;
+  border-bottom: 1px solid $abisso;
+  margin-bottom: 20px;
+}
+
+.edit-modal-after h3{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgba(0,0,0, 0.5);
+  padding-bottom: 20px;
 }
