--- a/app/assets/stylesheets/api/main.scss
+++ b/app/assets/stylesheets/api/main.scss
@@ -2,7 +2,7 @@
 
 .center{
   display: flex;
-  width: 1200px;
+  max-width: 1300px;
   overflow-wrap: break-word;
   justify-content: flex-start;
   margin: 0 auto;
