--- a/app/assets/stylesheets/api/votes.scss
+++ b/app/assets/stylesheets/api/votes.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the api/votes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@import 'colors.scss';
+
+.question-bar .upvote-block .vote-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.question-bar .upvote-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
