--- a/app/assets/stylesheets/api/question_show.scss
+++ b/app/assets/stylesheets/api/question_show.scss
@@ -13,11 +13,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 90%;
 }
 
 .question-show-block {
   display: flex;
-  flex-direction: column;
   width: 100%;
   align-items: center;
   padding: 20px 30px;
@@ -38,6 +38,9 @@
   align-items: center;
   justify-content: space-between;
   height: auto;
+  border-bottom: 1px solid rgba(3, 22, 52, 0.3);
+  margin-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 .username-time {
@@ -163,4 +166,12 @@
   margin-bottom: 20px;
   border-bottom: 1px solid rgba(0,0,0, 0.5);
   padding-bottom: 20px;
+}
+
+.question-show-items .body {
+  border-bottom: 1px solid rgba(3, 22, 52, 0.3);
+}
+
+.question-show-items .body {
+  padding-bottom: 15px;
 }
