Add deletion of upvotes and downvotes

--- a/app/assets/stylesheets/api/answers.scss
+++ b/app/assets/stylesheets/api/answers.scss
@@ -62,3 +62,8 @@
 .answer-details .title-bar i {
   margin-top: 0;
 }
+
+.answer-index .highlight {
+  background-color: rgba(3, 101, 100, 0.4);
+  font-size: 110%
+}
