--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -117,6 +117,23 @@
   color: $terra;
 }
 
+#qlv button i {
+  width: 100%;
+  height: 100%;
+}
+
+#qlv button{
+  border: 1px solid rgba(205, 179, 128, 0.2);
+}
+
+#qlv button:hover{
+  border: 1px solid rgba(205, 179, 128, 1);
+}
+
+#qlv .button-disabled:hover{
+  border: 1px solid rgba(205, 179, 128, 0.2);
+}
+
 .questions-list-navigation:first-child {
   border-bottom: 2px solid $terraTerra;
 }
@@ -131,4 +148,13 @@
 .fa-chevron-left:hover, .fa-chevron-left:focus, .fa-chevron-left:active,
  .fa-chevron-right:hover, .fa-chevron-right:focus, .fa-chevron-right:active,{
   color: $terra;
+}
+
+.fa-chevron-left, .fa-chevron-right {
+  color: $abisso;
+}
+
+#qlv .page-disabled {
+  color: $terraTerra;
+  cursor: default;
 }
