--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -6,7 +6,9 @@
 
 .form {
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
   height: auto;
   width: 285px;
   padding: 5px;
@@ -14,10 +16,14 @@
   border: 2px solid rgba(0,0,0,0.7);
   border-radius: 3px;
   align-items: center;
+  -webkit-align-items: center;
   align-self: flex-start;
+  -webkit-align-self: flex-start;
   flex: 1;
+  -webkit-flex: 1;
   font-family: "Droid Sans", serif;
   background-color: rgba(232, 221, 203, 0.1);
+  right: 1px;
 }
 
 .form-logo{
@@ -27,6 +33,7 @@
   padding: 10px;
   border-bottom: 5px solid $abisso;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   margin-bottom: 15px;
 }
 
@@ -50,7 +57,9 @@
 .main-form {
   display: flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
   justify-content: flex-start;
+  -webkit-justify-content: flex-start;
   width: 90%;
   height: auto;
   margin-bottom: 15px;
@@ -61,17 +70,21 @@
   border-top: 2px solid rgba(3,22,52,0.7);
   border-right: 2px solid rgba(3,22,52,0.7);
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   font-size: 70%;
   padding: 3px;
   flex: 1;
+  -webkit-flex: 1;
   text-align: center;
 }
 
 .flex-2 {
   flex: 3;
+  -webkit-flex: 3;
   color: red;
   font-size: 80%;
   align-self: flex-end;
+  -webkit-align-self: flex-end;
   text-align: right;
 }
 
@@ -88,12 +101,14 @@
 
 .title-block {
   display: flex;
+  -webkit-display: flex;
 }
 
 .auth-tabs{
   margin-top: 10px;
   display: flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
 }
 
 .tab-2 {
@@ -159,21 +174,27 @@
 
 .upper-tab{
   display: flex;
+  display: -webkit-flex;
   justify-content: flex-end;
+  -webkit-justify-content: flex-end;
 }
 
 
 .lower-tab{
   display: flex;
+  -webkit-display: flex;
   justify-content: flex-start;
+  -webkit-justify-content: flex-start;
   padding-bottom: 20px;
   opacity: 0.6;
 }
 
 .submit-demo{
   display: flex;
+  display: -webkit-flex;
   margin-top: 20px;
   flex-direction: column;
+  -webkit-flex-direction: column;
 }
 
 .demo{
