--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -1,7 +1,7 @@
 @import "api/colors.scss";
 
 header, body, div, ul, li, img, h1, input, p, link, button,
-a, h3, span{
+a, h3, span, h1{
   margin: 0;
   padding: 0;
   border: 0;
@@ -23,9 +23,6 @@ input:focus {
   outline: 0 none;
 }
 
-input:focus::-webkit-input-placeholder {
-    opacity: 0;
-}
 
 .link {
   text-decoration: none;
