--- a/app/assets/stylesheets/api/answers.scss
+++ b/app/assets/stylesheets/api/answers.scss
@@ -7,8 +7,10 @@
 .answer-details {
   width: 100%;
   align-items: center;
+  -webkit-align-items: center;
   padding: 20px 30px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 
   border-bottom: 1px solid rgba(3, 22, 52, 0.2);
 }
@@ -24,6 +26,7 @@
   padding: 4px;
   width: 100%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 .answer-submit input:last-of-type{
@@ -46,8 +49,11 @@
 
 .answer-submit {
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
   align-items: flex-end;
+  -webkit-align-items: flex-end;
   margin-top: 20px;
 }
 
