--- a/app/assets/stylesheets/api/main.scss
+++ b/app/assets/stylesheets/api/main.scss
@@ -2,8 +2,10 @@
 
 .center{
   display: flex;
+  display: -webkit-flex;
   max-width: 1300px;
   overflow-wrap: break-word;
   justify-content: flex-start;
+  -webkit-justify-content: flex-start;
   margin: 0 auto;
 }
