--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -6,11 +6,13 @@
 
 .question-index {
   flex: 3;
+  flex: -webkit-3;
   margin-right: 20px;
   margin-bottom: 30px;
   margin-top: 30px;
 
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   padding: 5px;
   border-radius: 3px;
   font-family: "Playfair Display", "serif";
@@ -18,17 +20,22 @@
 
 .questions {
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
   width: 90%;
   align-items: center;
+  -webkit-align-items: center;
   margin: 0 auto;
 }
 
 .question-lower{
   display: flex;
+  display: -webkit-flex;
   border-radius: 0;
   padding-top: 5px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   width: 100%;
   height: auto;
   font-size: 80%;
@@ -37,7 +44,9 @@
 
 .question-upper {
   display: flex;
+  display: -webkit-flex;
   justify-content: flex-start;
+  -webkit-justify-content: flex-start;
   border-radius: 0;
   padding-bottom: 5px;
   height: auto;
@@ -47,7 +56,9 @@
 .question-bar{
   width: 100%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   display: flex;
+  display: -webkit-flex;
   border-bottom: 2px solid $terraTerra;
   min-height: 100px;
   padding: 5px;
@@ -56,10 +67,15 @@
 .question-grid{
   width: 100%;
   flex: 4;
+  -webkit-flex: 4;
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
   align-items: baseline;
+  -webkit-align-items: baseline;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
   margin: 5px;
 }
 
@@ -70,6 +86,7 @@
 
 .upvote-block{
   flex: 1;
+  -webkit-flex: 1;
 }
 
 .upvote-block{
@@ -78,11 +95,13 @@
 
 .question-username{
   flex: 1;
+  -webkit-flex: 1;
   text-align: right;
 }
 
 .question-created-at{
   flex: 3;
+  -webkit-flex: 3;
   text-align: right;
   font-size: 75%;
 }
@@ -92,15 +111,19 @@
 
 .questions-list-navigation {
   display: flex;
+  display: -webkit-flex;
   justify-content: space-between;
+  -webkit-justify-content: space-between;
   width: 100%;
   padding-bottom: 23px;
   padding-top: 15px;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 .nav-center {
   flex: 5;
+  -webkit-flex: 5;
   width: 100%;
 }
 
@@ -111,7 +134,9 @@
 .questions-list-navigation:last-child button{
   cursor: pointer;
   flex: 1;
+  -webkit-flex: 1;
   align-self: flex-start;
+  -webkit-align-self: flex-start;
 }
 
 .questions-list-navigation:last-child button:hover{
