--- a/app/assets/stylesheets/api/session.scss
+++ b/app/assets/stylesheets/api/session.scss
@@ -100,13 +100,13 @@
 }
 
 .title-block {
-  display: flex;
+  display: -webkit-flex;
   -webkit-display: flex;
 }
 
 .auth-tabs{
   margin-top: 10px;
-  display: flex;
+  display: -webkit-flex;
   flex-direction: column;
   -webkit-flex-direction: column;
 }
