--- a/app/assets/stylesheets/api/tab.scss
+++ b/app/assets/stylesheets/api/tab.scss
@@ -2,8 +2,10 @@
 
 .tab-bar {
   display: flex;
+  display: -webkit-flex;
   width: 100%;
   justify-content: flex-end;
+  -webkit-justify-content: flex-end;
 }
 
 .tab-bar li button:not(.unselected) {
