--- a/app/assets/stylesheets/api/votes.scss
+++ b/app/assets/stylesheets/api/votes.scss
@@ -6,9 +6,13 @@
 
 .question-bar .upvote-block .vote-block {
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
   align-items: center;
+  -webkit-align-items: center;
   justify-content: center;
+  -webkit-justify-content: center;
 }
 
 .question-bar .upvote-block .vote-block i {
@@ -22,7 +26,9 @@
 
 .question-bar .upvote-block .vote-block p {
   display: flex;
+  display: -webkit-flex;
   align-items: center;
+  -webkit-align-items: center;
 }
 
 .question-bar .upvote-block .vote-block .active {
@@ -32,15 +38,20 @@
 
 .question-bar .upvote-block {
   display: flex;
+  display: -webkit-flex;
   justify-content: center;
+  -webkit-justify-content: center;
   align-items: center;
+  -webkit-align-items: center;
 }
 
 ////////////////////////////////////////////////////////////
 
 .question-show-title-bar {
   display: flex;
+  display: -webkit-flex;
   align-self: flex-start;
+  -webkit-align-self: flex-start;
   width: 80px;
   border-left: 2px solid rgba(3, 22, 52, 0.2);
   border-right: 2px solid rgba(3, 22, 52, 0.2);
@@ -51,7 +62,9 @@
 .question-show-title-bar .vote-block {
   width: 100%;
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
 }
 
 .question-show-title-bar .vote-block i {
@@ -78,15 +91,20 @@
 
 .answer-title-upvote-block {
   display: flex;
+  display: -webkit-flex;
   height: auto;
 }
 
 .answer-title-upvote-block .vote-block {
   width: 80px;
   display: flex;
+  display: -webkit-flex;
   flex-direction: column;
+  -webkit-flex-direction: column;
   justify-content: flex-start;
+  -webkit-justify-content: flex-start;
   align-items: center;
+  -webkit-align-items: center;
   margin-right: 15px;
 }
 
