--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -55,3 +55,10 @@ body {
 i {
   cursor: pointer;
 }
+
+#footer {
+  display: block;
+  content: "";
+  height: 50px;
+  background-color: $acquaPro;
+}
