--- a/app/assets/stylesheets/api/votes.scss
+++ b/app/assets/stylesheets/api/votes.scss
@@ -43,6 +43,26 @@
   -webkit-justify-content: center;
   align-items: center;
   -webkit-align-items: center;
+  margin-left: 15px;
+}
+
+.answered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 5px;
+  border: 1px solid rgba(3, 101, 100, 0.3);
+  margin: 0 20px;
+}
+
+.answered-box {
+  background-color: rgba(3, 101, 100, 0.1);
+}
+
+.answered h4{
+  margin: 0;
+  font-size: 70%
 }
 
 ////////////////////////////////////////////////////////////
