--- a/app/assets/stylesheets/api/questions.scss
+++ b/app/assets/stylesheets/api/questions.scss
@@ -15,7 +15,7 @@
   -webkit-box-sizing: border-box;
   padding: 5px;
   border-radius: 3px;
-  font-family: "Playfair Display", "serif";
+  font-family: "Open Sans", sans-serif;
 }
 
 .questions {
