--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 
-    <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans|Playfair+Display|PT+Serif|Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans|Josefin+Sans" rel="stylesheet">
     <script src="https://use.fontawesome.com/2fe71a01c5.js"></script>
 
     <script>
