--- a/app/assets/stylesheets/api/question_show.scss
+++ b/app/assets/stylesheets/api/question_show.scss
@@ -11,7 +11,7 @@
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   border-radius: 3px;
-  font-family: "Playfair Display", "serif";
+  font-family: "Open Sans", sans-serif;
   display: flex;
   display: -webkit-flex;
   flex-direction: column;
@@ -65,7 +65,7 @@
   -webkit-align-self: flex-end;
   display: flex;
   display: -webkit-flex;
-  font-family: 'PT Serif', serif;
+  font-family: 'Open Sans', sans-serif;
   align-items: flex-end;
   -webkit-align-items: flex-end;
   margin: 15px 0;
